# Text-Classifier

./: README.md  pyproject.toml
.ipynb_checkpoints/: text_classifier-checkpoint.ipynb
